# pico-w-hello-world

./: CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  main.c
